project('jln.mp', 'cpp', default_options : ['cpp_std=c++17'])

subdir('meson_jln_flags')
add_global_arguments(jln_cpp_flags, language:'cpp')
add_global_link_arguments(jln_link_flags, language:'cpp')

test_dep = declare_dependency(include_directories: include_directories('test/include', 'include'))

# start tests
t_0_0 = executable('is_instance_of', 'test/src/utility/is_instance_of.cpp', dependencies: test_dep, build_by_default: false)
t_0_1 = executable('conditional', 'test/src/utility/conditional.cpp', dependencies: test_dep, build_by_default: false)
t_0_2 = executable('always', 'test/src/utility/always.cpp', dependencies: test_dep, build_by_default: false)
t_0_3 = executable('eager', 'test/src/utility/eager.cpp', dependencies: test_dep, build_by_default: false)
t_0_4 = executable('same_as', 'test/src/utility/same_as.cpp', dependencies: test_dep, build_by_default: false)
t_0_5 = executable('unpack', 'test/src/utility/unpack.cpp', dependencies: test_dep, build_by_default: false)
t_0_6 = executable('has_type', 'test/src/utility/has_type.cpp', dependencies: test_dep, build_by_default: false)
alias_target('mp.utility', t_0_0, t_0_1, t_0_2, t_0_3, t_0_4, t_0_5, t_0_6)
t_1_0 = executable('iota', 'test/src/algorithm/iota.cpp', dependencies: test_dep, build_by_default: false)
t_1_1 = executable('take_while', 'test/src/algorithm/take_while.cpp', dependencies: test_dep, build_by_default: false)
t_1_2 = executable('fold_left', 'test/src/algorithm/fold_left.cpp', dependencies: test_dep, build_by_default: false)
t_1_3 = executable('indices', 'test/src/algorithm/indices.cpp', dependencies: test_dep, build_by_default: false)
t_1_4 = executable('lower_bound', 'test/src/algorithm/lower_bound.cpp', dependencies: test_dep, build_by_default: false)
t_1_5 = executable('contains', 'test/src/algorithm/contains.cpp', dependencies: test_dep, build_by_default: false)
t_1_6 = executable('reverse', 'test/src/algorithm/reverse.cpp', dependencies: test_dep, build_by_default: false)
t_1_7 = executable('flatten', 'test/src/algorithm/flatten.cpp', dependencies: test_dep, build_by_default: false)
t_1_8 = executable('index', 'test/src/algorithm/index.cpp', dependencies: test_dep, build_by_default: false)
t_1_9 = executable('sort', 'test/src/algorithm/sort.cpp', dependencies: test_dep, build_by_default: false)
t_1_10 = executable('accumulate', 'test/src/algorithm/accumulate.cpp', dependencies: test_dep, build_by_default: false)
t_1_11 = executable('partition', 'test/src/algorithm/partition.cpp', dependencies: test_dep, build_by_default: false)
t_1_12 = executable('unique', 'test/src/algorithm/unique.cpp', dependencies: test_dep, build_by_default: false)
t_1_13 = executable('is_sorted', 'test/src/algorithm/is_sorted.cpp', dependencies: test_dep, build_by_default: false)
t_1_14 = executable('insert_range', 'test/src/algorithm/insert_range.cpp', dependencies: test_dep, build_by_default: false)
t_1_15 = executable('same', 'test/src/algorithm/same.cpp', dependencies: test_dep, build_by_default: false)
t_1_16 = executable('swap_index', 'test/src/algorithm/swap_index.cpp', dependencies: test_dep, build_by_default: false)
t_1_17 = executable('all_of', 'test/src/algorithm/all_of.cpp', dependencies: test_dep, build_by_default: false)
t_1_18 = executable('prepend', 'test/src/algorithm/prepend.cpp', dependencies: test_dep, build_by_default: false)
t_1_19 = executable('cartesian', 'test/src/algorithm/cartesian.cpp', dependencies: test_dep, build_by_default: false)
t_1_20 = executable('replace', 'test/src/algorithm/replace.cpp', dependencies: test_dep, build_by_default: false)
t_1_21 = executable('group', 'test/src/algorithm/group.cpp', dependencies: test_dep, build_by_default: false)
t_1_22 = executable('make_int_sequence', 'test/src/algorithm/make_int_sequence.cpp', dependencies: test_dep, build_by_default: false)
t_1_23 = executable('split_after', 'test/src/algorithm/split_after.cpp', dependencies: test_dep, build_by_default: false)
t_1_24 = executable('none_of', 'test/src/algorithm/none_of.cpp', dependencies: test_dep, build_by_default: false)
t_1_25 = executable('combine', 'test/src/algorithm/combine.cpp', dependencies: test_dep, build_by_default: false)
t_1_26 = executable('split_before', 'test/src/algorithm/split_before.cpp', dependencies: test_dep, build_by_default: false)
t_1_27 = executable('erase', 'test/src/algorithm/erase.cpp', dependencies: test_dep, build_by_default: false)
t_1_28 = executable('find', 'test/src/algorithm/find.cpp', dependencies: test_dep, build_by_default: false)
t_1_29 = executable('any_of', 'test/src/algorithm/any_of.cpp', dependencies: test_dep, build_by_default: false)
t_1_30 = executable('range', 'test/src/algorithm/range.cpp', dependencies: test_dep, build_by_default: false)
t_1_31 = executable('zip', 'test/src/algorithm/zip.cpp', dependencies: test_dep, build_by_default: false)
t_1_32 = executable('upper_bound', 'test/src/algorithm/upper_bound.cpp', dependencies: test_dep, build_by_default: false)
t_1_33 = executable('fold_right', 'test/src/algorithm/fold_right.cpp', dependencies: test_dep, build_by_default: false)
t_1_34 = executable('repeat', 'test/src/algorithm/repeat.cpp', dependencies: test_dep, build_by_default: false)
t_1_35 = executable('split_at', 'test/src/algorithm/split_at.cpp', dependencies: test_dep, build_by_default: false)
t_1_36 = executable('remove_adjacent', 'test/src/algorithm/remove_adjacent.cpp', dependencies: test_dep, build_by_default: false)
t_1_37 = executable('insert', 'test/src/algorithm/insert.cpp', dependencies: test_dep, build_by_default: false)
t_1_38 = executable('count', 'test/src/algorithm/count.cpp', dependencies: test_dep, build_by_default: false)
t_1_39 = executable('split', 'test/src/algorithm/split.cpp', dependencies: test_dep, build_by_default: false)
t_1_40 = executable('powerset', 'test/src/algorithm/powerset.cpp', dependencies: test_dep, build_by_default: false)
t_1_41 = executable('remove', 'test/src/algorithm/remove.cpp', dependencies: test_dep, build_by_default: false)
t_1_42 = executable('group_n', 'test/src/algorithm/group_n.cpp', dependencies: test_dep, build_by_default: false)
t_1_43 = executable('copy', 'test/src/algorithm/copy.cpp', dependencies: test_dep, build_by_default: false)
t_1_44 = executable('transform', 'test/src/algorithm/transform.cpp', dependencies: test_dep, build_by_default: false)
t_1_45 = executable('append', 'test/src/algorithm/append.cpp', dependencies: test_dep, build_by_default: false)
t_1_46 = executable('rotate', 'test/src/algorithm/rotate.cpp', dependencies: test_dep, build_by_default: false)
t_1_47 = executable('slice', 'test/src/algorithm/slice.cpp', dependencies: test_dep, build_by_default: false)
alias_target('mp.algorithm', t_1_0, t_1_1, t_1_2, t_1_3, t_1_4, t_1_5, t_1_6, t_1_7, t_1_8, t_1_9, t_1_10, t_1_11, t_1_12, t_1_13, t_1_14, t_1_15, t_1_16, t_1_17, t_1_18, t_1_19, t_1_20, t_1_21, t_1_22, t_1_23, t_1_24, t_1_25, t_1_26, t_1_27, t_1_28, t_1_29, t_1_30, t_1_31, t_1_32, t_1_33, t_1_34, t_1_35, t_1_36, t_1_37, t_1_38, t_1_39, t_1_40, t_1_41, t_1_42, t_1_43, t_1_44, t_1_45, t_1_46, t_1_47)
t_2_0 = executable('recurse', 'test/src/functional/recurse.cpp', dependencies: test_dep, build_by_default: false)
t_2_1 = executable('fork', 'test/src/functional/fork.cpp', dependencies: test_dep, build_by_default: false)
t_2_2 = executable('is_invocable', 'test/src/functional/is_invocable.cpp', dependencies: test_dep, build_by_default: false)
t_2_3 = executable('cascade', 'test/src/functional/cascade.cpp', dependencies: test_dep, build_by_default: false)
t_2_4 = executable('bind', 'test/src/functional/bind.cpp', dependencies: test_dep, build_by_default: false)
t_2_5 = executable('invoke', 'test/src/functional/invoke.cpp', dependencies: test_dep, build_by_default: false)
t_2_6 = executable('if', 'test/src/functional/if.cpp', dependencies: test_dep, build_by_default: false)
t_2_7 = executable('compose', 'test/src/functional/compose.cpp', dependencies: test_dep, build_by_default: false)
alias_target('mp.functional', t_2_0, t_2_1, t_2_2, t_2_3, t_2_4, t_2_5, t_2_6, t_2_7)
t_3_0 = executable('has_value', 'test/src/value/has_value.cpp', dependencies: test_dep, build_by_default: false)
t_3_1 = executable('is_val', 'test/src/value/is_val.cpp', dependencies: test_dep, build_by_default: false)
t_3_2 = executable('as_val', 'test/src/value/as_val.cpp', dependencies: test_dep, build_by_default: false)
t_3_3 = executable('values', 'test/src/value/values.cpp', dependencies: test_dep, build_by_default: false)
alias_target('mp.value', t_3_0, t_3_1, t_3_2, t_3_3)
t_4_0 = executable('operators', 'test/src/number/operators.cpp', dependencies: test_dep, build_by_default: false)
t_4_1 = executable('as_number', 'test/src/number/as_number.cpp', dependencies: test_dep, build_by_default: false)
t_4_2 = executable('as_bool', 'test/src/number/as_bool.cpp', dependencies: test_dep, build_by_default: false)
t_4_3 = executable('numbers', 'test/src/number/numbers.cpp', dependencies: test_dep, build_by_default: false)
t_4_4 = executable('math', 'test/src/number/math.cpp', dependencies: test_dep, build_by_default: false)
t_4_5 = executable('is_number', 'test/src/number/is_number.cpp', dependencies: test_dep, build_by_default: false)
alias_target('mp.number', t_4_0, t_4_1, t_4_2, t_4_3, t_4_4, t_4_5)
t_5_0 = executable('push_front', 'test/src/list/push_front.cpp', dependencies: test_dep, build_by_default: false)
t_5_1 = executable('is_size_of', 'test/src/list/is_size_of.cpp', dependencies: test_dep, build_by_default: false)
t_5_2 = executable('size', 'test/src/list/size.cpp', dependencies: test_dep, build_by_default: false)
t_5_3 = executable('list', 'test/src/list/list.cpp', dependencies: test_dep, build_by_default: false)
t_5_4 = executable('drop', 'test/src/list/drop.cpp', dependencies: test_dep, build_by_default: false)
t_5_5 = executable('is_list', 'test/src/list/is_list.cpp', dependencies: test_dep, build_by_default: false)
t_5_6 = executable('offset', 'test/src/list/offset.cpp', dependencies: test_dep, build_by_default: false)
t_5_7 = executable('pop_front', 'test/src/list/pop_front.cpp', dependencies: test_dep, build_by_default: false)
t_5_8 = executable('push_back', 'test/src/list/push_back.cpp', dependencies: test_dep, build_by_default: false)
t_5_9 = executable('front', 'test/src/list/front.cpp', dependencies: test_dep, build_by_default: false)
t_5_10 = executable('join', 'test/src/list/join.cpp', dependencies: test_dep, build_by_default: false)
t_5_11 = executable('take', 'test/src/list/take.cpp', dependencies: test_dep, build_by_default: false)
t_5_12 = executable('pop_back', 'test/src/list/pop_back.cpp', dependencies: test_dep, build_by_default: false)
t_5_13 = executable('at', 'test/src/list/at.cpp', dependencies: test_dep, build_by_default: false)
t_5_14 = executable('back', 'test/src/list/back.cpp', dependencies: test_dep, build_by_default: false)
t_5_15 = executable('is_empty', 'test/src/list/is_empty.cpp', dependencies: test_dep, build_by_default: false)
t_5_16 = executable('as_list', 'test/src/list/as_list.cpp', dependencies: test_dep, build_by_default: false)
alias_target('mp.list', t_5_0, t_5_1, t_5_2, t_5_3, t_5_4, t_5_5, t_5_6, t_5_7, t_5_8, t_5_9, t_5_10, t_5_11, t_5_12, t_5_13, t_5_14, t_5_15, t_5_16)
alias_target('mp', t_0_0, t_0_1, t_0_2, t_0_3, t_0_4, t_0_5, t_0_6, t_1_0, t_1_1, t_1_2, t_1_3, t_1_4, t_1_5, t_1_6, t_1_7, t_1_8, t_1_9, t_1_10, t_1_11, t_1_12, t_1_13, t_1_14, t_1_15, t_1_16, t_1_17, t_1_18, t_1_19, t_1_20, t_1_21, t_1_22, t_1_23, t_1_24, t_1_25, t_1_26, t_1_27, t_1_28, t_1_29, t_1_30, t_1_31, t_1_32, t_1_33, t_1_34, t_1_35, t_1_36, t_1_37, t_1_38, t_1_39, t_1_40, t_1_41, t_1_42, t_1_43, t_1_44, t_1_45, t_1_46, t_1_47, t_2_0, t_2_1, t_2_2, t_2_3, t_2_4, t_2_5, t_2_6, t_2_7, t_3_0, t_3_1, t_3_2, t_3_3, t_4_0, t_4_1, t_4_2, t_4_3, t_4_4, t_4_5, t_5_0, t_5_1, t_5_2, t_5_3, t_5_4, t_5_5, t_5_6, t_5_7, t_5_8, t_5_9, t_5_10, t_5_11, t_5_12, t_5_13, t_5_14, t_5_15, t_5_16)
# stop tests

executable('mp_test', 'test/mp.cpp', dependencies: test_dep)
